--- a/SQL-Introduction/views/shop/cart.ejs
+++ b/SQL-Introduction/views/shop/cart.ejs
@@ -7,14 +7,21 @@
             <ul>
                 <% products.forEach(p => { %>
                     <li>
-                        <p><%= p.productData.title %> (<%= p.qty %>)</p>
+                        <h1><%= p.title %></h1>
+                        <h2>Quantity: <%= p.cartItem.quantity %></h2>
                         <form action="/cart-delete-item" method="POST">
-                            <input type="hidden" name="productId" value="<%= p.productData.id %>" />
+                            <input type="hidden" name="productId" value="<%= p.id %>" />
                             <button type="submit" class="btn">Delete</button>
                         </form>
                     </li>
                 <% }) %>
             </ul>
+            <hr>
+            <div class="centered">
+                <form action="/create-order" method="POST">
+                    <button type="submit" class="btn">Order Now!</button>
+                </form>
+            </div>
         <% } else { %>
             <h1>No Products in Cart!</h1>
         <% } %>
